# virtual-human-memory

./: .gitignore  .gitmodules  PR_SUMMARY.md  README.md  TEST_GUIDE.md  conftest.py  learning-log.md  minikube-worker-recovery.md  pull-all.sh  pyproject.toml  pyrightconfig.json  requirements.txt  virtual-human-memory.code-workspace
.github/workflows/: blank.yml  ci.yaml  ci.yml  publish.yaml
common/utils/: .gitignore  LICENSE  README.md
common/utils/tests/: test_common_utils.py  test_embedding.py  test_smoke.py
docker/: worker.Dockerfile
docs/: index.html  minikube-worker-recovery.md
docs/concepts/: README.md  retry-logic-explanation.md  workers-overview.md
k8s/: README.md
k8s/config/: configmap.yaml  secrets.yaml
k8s/infrastructure/: kafka-deployment.yaml  kafka-pvc.yaml  kafka-service.yaml  kafka-topic-job.yaml  qdrant-deployment.yaml  qdrant-pvc.yaml  qdrant-service.yaml
k8s/scripts/: deploy.sh  setup-cluster.sh  teardown-cluster.sh
k8s/workers/: indexer-deployment.yaml  indexer-service.yaml  resonance-deployment.yaml  resonance-service.yaml  reteller-deployment.yaml  reteller-service.yaml
onboarding/: 03_Service_Deep_Dive.md  04_Infrastructure.md  06_Development_Deployment.md  07_Tooling_And_Scripts.md
tools/: README.md  demo_three_retells.py
tools/demo/: README.md  indexer_demo.py
workers/: __init__.py
workers/indexer/: README.md
workers/indexer/tests/: __init__.py  (+6 more)
workers/resonance/: README.md
workers/reteller/: README.md
workers/vhm_indexer/: main.py
workers/vhm_resonance/: config.py  main.py
workers/vhm_reteller/: main.py
(+8 files in other folders)
