[project]
name = "virtual-human-memory"
version = "0.1.0"
description = "A professional-grade, Kubernetes-native narrative memory system for conversational AI."
requires-python = ">=3.12.0,<3.13.0"
dependencies = [
    # Common dependencies that might be used by multiple services or for local dev
    # Note: qdrant-client and confluent-kafka are needed for tests and local development
    "qdrant-client>=1.9.2",
    "confluent-kafka==2.4.0",
    "litellm",
    "portkey-ai",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.0.0",
    "python-dateutil==2.9.0.post0",
    "uvicorn",
    "fastapi",
    "tqdm==4.66.4",
    "orjson==3.10.7",
    "numpy==1.26.4",
    "requests>=2.32.5",
    "urllib3>=2.0.0",
    "certifi",
    "charset-normalizer",
    "idna",
    "protobuf>=6.32.1",
    "grpcio>=1.75.1",
    "grpcio-tools>=1.75.1",
    "typing-extensions>=4.15.0",
    "pydantic-core>=2.16.2",
    "annotated-types>=0.7.0",
    "typing-inspection>=0.4.2",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common/utils/vhm_common_utils", "workers"]
